--- a/index.html
+++ b/index.html
@@ -1,59 +1,189 @@
 <!doctype html>
-<html lang="zh-Hant" data-theme="auto">
+<html lang="zh-Hant">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Macaron Kaomoji - DNFK Studios</title>
-  <meta name="description" content=" 顔文字<3 ">
+  <title>Kaomoji Gallery | DNFK</title>
+  <meta name="description" content=" 顏文字<3 ">
+  <link rel="manifest" href="manifest20250929143101.webmanifest">
+  <meta name="theme-color" content="#f7f5f2">
+  <link rel="icon" href="icons/icon-192.png" sizes="192x192">
+  <link rel="apple-touch-icon" href="icons/icon-192.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;600;700&family=Nunito:wght@400;700;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style25092301.css">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=Noto+Sans+TC:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style20250929142401.css">
 </head>
 <body>
-  <div class="bg-candy"></div>
-  <header class="site-header">
-    <h1>Macaron Kaomoji</h1>
-    <p class="subtitle">暗夜飛鳶工作室 DNFK Studios</p>
+  <div class="woodbar" aria-hidden="true"></div>
 
-    <div class="toolbar">
-      <div class="tool-left">
-        <div class="search-box">
-          <input id="searchInput" type="text" placeholder="搜尋關鍵字或直接貼上顏文字…" aria-label="搜尋顏文字">
-          <button id="clearBtn" class="btn btn-primary" data-ripple>清除</button>
-        </div>
-        <div class="quick-actions">
-          <button id="shuffleBtn" class="btn" data-ripple>隨機</button>
-          <button id="densityBtn" class="btn" data-ripple data-density="cozy">版面：舒適</button>
-        </div>
-      </div>
-      <div class="tool-right">
-        <button id="themeBtn" class="btn btn-ghost" data-ripple title="深淺色切換">🌞/🌙</button>
-      </div>
+  <header class="topbar">
+    <div class="brand">
+      <div class="logo">顔</div>
+      <h1>Kaomoji Gallery</h1>
+      <span class="ver">v1</span>
     </div>
+    <nav class="nav">
+      <button id="tabAll" class="chip active" aria-pressed="true">全部</button>
+      <button id="tabFav" class="chip" aria-pressed="false">收藏</button>
+    </nav>
   </header>
 
   <main class="container">
-    <section class="controls">
-      <div class="tag-row" id="tagRow"></div>
+    <!-- Announcements Board -->
+    <section class="announce" id="announce" aria-live="polite">
+      <div class="announce-head">
+        <strong>公告</strong>
+        <div class="announce-actions">
+          <button id="clearAnns" class="btn ghost sm">清空已讀</button>
+        </div>
+      </div>
+      <div id="annList" class="ann-list">
+        <div class="ann info">
+          <div class="title">歡迎來到 Kaomoji Gallery</div>
+          <div class="body">這裡將發布網站更新、維護通知，以及 PWA 版本更新提示。</div>
+        </div>
+      </div>
+    </section>
+
+    <section class="panel">
+      <div class="row">
+        <div class="search">
+          <input id="q" type="text" placeholder="搜尋文字或標籤（例：happy、tear、^_^）" aria-label="搜尋">
+        </div>
+        <div class="options">
+          <label class="select">
+            每頁
+            <select id="perPage">
+              <option value="24">24</option>
+              <option value="36" selected>36</option>
+              <option value="48">48</option>
+              <option value="72">72</option>
+            </select>
+          </label>
+          <label class="select">
+            標籤邏輯
+            <select id="tagMode">
+              <option value="and" selected>AND（全部包含）</option>
+              <option value="or">OR（任一符合）</option>
+            </select>
+          </label>
+          <label class="select">
+            清單模式
+            <select id="listMode">
+              <option value="auto" selected>AUTO（大資料自動虛擬）</option>
+              <option value="virtual">虛擬清單</option>
+              <option value="standard">一般清單</option>
+            </select>
+          </label>
+        </div>
+      </div>
+
+      <div class="tagbar">
+        <div class="tag-search pretty">
+          <input id="tagQ" type="text" placeholder="過濾標籤…" aria-label="搜尋標籤">
+          <span class="mag">🔎</span>
+        </div>
+
+        <!-- Popular group (usage-based; hidden if none) -->
+        <details class="group" id="grp-popular" open hidden>
+          <summary>
+            常用 Popular
+            <span class="grp-actions">
+              <button data-act="all" class="btn ghost xs">全選</button>
+              <button data-act="none" class="btn ghost xs">全不選</button>
+            </span>
+          </summary>
+          <div class="tags" data-group="popular"></div>
+        </details>
+
+        <details class="group" open>
+          <summary>
+            情緒 Mood
+            <span class="grp-actions">
+              <button data-act="all" class="btn ghost xs">全選</button>
+              <button data-act="none" class="btn ghost xs">全不選</button>
+            </span>
+          </summary>
+          <div class="tags" data-group="mood"></div>
+        </details>
+
+        <details class="group" open>
+          <summary>
+            動作 Actions
+            <span class="grp-actions">
+              <button data-act="all" class="btn ghost xs">全選</button>
+              <button data-act="none" class="btn ghost xs">全不選</button>
+            </span>
+          </summary>
+          <div class="tags" data-group="actions"></div>
+        </details>
+
+        <details class="group">
+          <summary>
+            動物 Animals
+            <span class="grp-actions">
+              <button data-act="all" class="btn ghost xs">全選</button>
+              <button data-act="none" class="btn ghost xs">全不選</button>
+            </span>
+          </summary>
+          <div class="tags" data-group="animals"></div>
+        </details>
+
+        <details class="group">
+          <summary>
+            特性 Meta
+            <span class="grp-actions">
+              <button data-act="all" class="btn ghost xs">全選</button>
+              <button data-act="none" class="btn ghost xs">全不選</button>
+            </span>
+          </summary>
+          <div class="tags" data-group="meta"></div>
+        </details>
+
+        <details class="group">
+          <summary>
+            其他 Others
+            <span class="grp-actions">
+              <button data-act="all" class="btn ghost xs">全選</button>
+              <button data-act="none" class="btn ghost xs">全不選</button>
+            </span>
+          </summary>
+          <div class="tags" data-group="others"></div>
+        </details>
+
+        <div class="active-tags-toolbar">
+          <div id="activeTags" class="active-tags" aria-live="polite"></div>
+          <div class="tools">
+            <button id="clearTags" class="btn danger xs">清空所有標籤</button>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section id="stats" class="stats">載入中…</section>
 
-    <section id="grid" class="grid"></section>
+    <!-- Two renderers: standard grid + virtual grid -->
+    <section id="grid" class="grid" aria-live="polite"></section>
+    <section id="vgrid" class="vgrid" aria-live="polite" hidden>
+      <div id="vspacer"></div>
+      <div id="vitems"></div>
+    </section>
+
+    <section class="pager-row">
+      <div class="pager" id="pager"></div>
+    </section>
   </main>
 
-  <footer class="site-footer">
-    <p>
-      Copyright © 2025 DNFK Studios.<nav>
-      暗夜飛鳶工作室 資訊小組製作<nav>
-      聯絡資訊：tit.contect@dnfk.qzz.io
-    </p>
+  <div id="toast" class="toast" role="status" aria-live="polite"></div>
+
+  <footer class="footer">
+    <p>Copyright © 2025 DNFK Studios.<br>
+       暗夜飛鳶工作室 資訊小組製作 | 聯絡資訊：tit.contect@dnfk.qzz.io</p>
   </footer>
 
-  <div class="toast" id="toast" role="status" aria-live="polite"></div>
-
-  <script src="kaomoji-data25092301.js"></script>
-  <script src="app25092301.js"></script>
+  <!-- Reverted loader: single JS data -->
+  <script src="kaomoji-data20250929142901.js"></script>
+  <script src="app20250929143001.js"></script>
 </body>
 </html>
