--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
   <footer class="footer">
     <p>Copyright © 2025 DNFK Studios.<br>
        暗夜飛鳶工作室 資訊小組製作 | 聯絡資訊：<a href="mailto:tit.contect@dnfk.qzz.io?subject=[Web Kaomoji Report]" style="color:#8b5e3c; text-decoration:none;">
-       tit.contect@dnfk.qzz.io</p>
+       tit.contect@dnfk.qzz.io</a></p>
   </footer>
 
   <!-- Reverted loader: single JS data -->
